--- a/tesina/tesina.tex
+++ b/tesina/tesina.tex
@@ -1133,4 +1133,14 @@ Partendo dalla base dei WireFrame si sono sviluppati i Mockup per pensare l'obie
 	\caption{Mockup}
 \end{figure}
 
+\newpage
+\chapter{Unit Test}
+Come ultima fase di progettazione, si è andato ad implementare una parte di test del Software mediante l'utilizzo del framework di automazione dei test PyUnit. 
+La fase di Test è necessaria per andare a valutare se il software esegue correttamente tutti i sui compiti.
+
+\section{Test Operatori}
+Nella seguente sezione sono riportati i test sui metodi principali degli operatori.
+Non sono stati eseguiti i test di mezzi, clienti, servizi ed utenti in quanto risultano essere equivalenti ad operatori.
+
+
 \end{document}
