--- a/tesina/tesina.tex
+++ b/tesina/tesina.tex
@@ -1136,11 +1136,47 @@ Partendo dalla base dei WireFrame si sono sviluppati i Mockup per pensare l'obie
 \newpage
 \chapter{Unit Test}
 Come ultima fase di progettazione, si è andato ad implementare una parte di test del Software mediante l'utilizzo del framework di automazione dei test PyUnit. 
-La fase di Test è necessaria per andare a valutare se il software esegue correttamente tutti i sui compiti.
+La fase di Test è necessaria per andare a valutare se il software esegue correttamente tutti i suoi compiti.
+
+\section{Test Login}
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.68]{test_login}
+	\caption{Codice unit test login}
+\end{figure}
 
 \section{Test Operatori}
 Nella seguente sezione sono riportati i test sui metodi principali degli operatori.
 Non sono stati eseguiti i test di mezzi, clienti, servizi ed utenti in quanto risultano essere equivalenti ad operatori.
+
+\subsection{Test Inserimento}
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{test_inserimento}
+	\caption{Codice unit test inserimento operatore}
+\end{figure}
+
+\subsection{Test Ricerca}
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.68]{test_ricerca}
+	\caption{Codice unit test ricerca operatore}
+\end{figure}
+
+\subsection{Test Elimina}
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{test_elimina}
+	\caption{Codice unit test eliminazione operatore}
+\end{figure}
+
+\subsection{Test Update}
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.5]{test_update}
+	\caption{Codice unit test modifica operatore}
+\end{figure}
+
 
 
 \end{document}
